add ant blazor design references

--- a/BlazorClient/wwwroot/index.html
+++ b/BlazorClient/wwwroot/index.html
@@ -9,6 +9,10 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="BlazorClient.styles.css" rel="stylesheet" />
+    
+<!--    ANT BLAZOR DESIGN-->
+    <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
+    <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
 </head>
 
 <body>
@@ -21,6 +25,7 @@
     </div>
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+
 </body>
 
 </html>
