Created the pagre of groups

--- a/BlazorClient/wwwroot/index.html
+++ b/BlazorClient/wwwroot/index.html
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    
+    <div id="app"><div class="spinner"></div><div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
@@ -30,7 +31,7 @@
 
     <script src="_content/Blazorise/blazorise.js"></script>
     <script src="_content/Blazorise.AntDesign/blazorise.antdesign.js"></script>
-    
+
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 
