--- a/BlazorClient/wwwroot/index.html
+++ b/BlazorClient/wwwroot/index.html
@@ -25,7 +25,12 @@
 
 <body>
     
-    <div id="app"><div class="spinner"></div><div>
+    <div id="app">
+        <div class="loader">
+            <div class="spinner">
+            </div>
+         </div>
+       </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
